...

  if (value == null || value.isEmpty) {
    return null;
  } else if (value.length > 254) {
    return 'Email can\'t be longer than 254 characters';
  } else if (!regex.hasMatch(value)) {
    return 'Enter a valid email address';
  }
  return null;
}

// Password validator to ensure at least 8 characters and contains both letters and digits
String? passwordValidator(String? value) {
  if (value == null || value.isEmpty) {
    return null;
  } else if (value.length < 8) {
    return 'Password must be at least 8 characters long';
  } else if (value.length > 128) {
    return 'Password can\'t be longer than 128 characters';
  }
  return null;
}

...
