...
                          color: Palette.primaryText,
                          fontSize: Sizes.headingText,
                          fontWeight: FontWeight.bold,
                          padding: EdgeInsets.only(bottom: 10),
                        ),
                        const TitleElement(
                          name: 'Enter your credentials',
                          color: Palette.accentText,
                          fontSize: Sizes.secondaryText,
                          padding: EdgeInsets.only(bottom: 30),
                          width: 250.0,
                        ),
                        ShakeMyAuthInput(
...
