...

        await ref.read(chattingControllerProvider).newLoginInit();

        state = AuthState.authenticated;
        return;
      } else {
        state = AuthState.fail('Invalid email or password');
        return;
      }
    }

    final response = await ref
        .read(authRemoteRepositoryProvider)
...
